fix horizontal scrollbar appearing in certain situations

--- a/app/styles/ember-mobile-menu/variables.scss
+++ b/app/styles/ember-mobile-menu/variables.scss
@@ -1,4 +1,5 @@
 // variables ---------------------------------------------------------------- //
+$mobile-menu-wrapper-width: 100% !default;
 $mobile-menu-wrapper-min-height: 100vh !default;
 
 $mobile-menu-transition-duration: 0.3s !default;
